--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "15.4.5",
     "next-auth": "^5.0.0-beta.29",
     "next-cloudinary": "^6.16.0",
+    "razorpay": "^2.9.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.5.2",
