created stats animation

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cloudinary": "^2.7.0",
     "express": "^5.1.0",
     "framer-motion": "^12.23.12",
+    "gsap": "^3.13.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.536.0",
     "mongoose": "^8.17.1",
@@ -26,6 +27,7 @@
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-range": "^1.10.0",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
