--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.4.0",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
