--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.536.0",
     "mongoose": "^8.17.1",
-    "next": "16.0.7",
+    "next": "15.4.5",
     "next-auth": "^5.0.0-beta.29",
     "next-cloudinary": "^6.16.0",
     "razorpay": "^2.9.6",
-    "react": "19.2.1",
-    "react-dom": "19.2.1",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
@@ -43,18 +43,14 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^20.19.9",
-    "@types/react": "19.2.7",
-    "@types/react-dom": "19.2.3",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "@types/redux-persist": "^4.0.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
-    "eslint-config-next": "16.0.7",
+    "eslint-config-next": "15.4.5",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
     "typescript": "^5"
-  },
-  "overrides": {
-    "@types/react": "19.2.7",
-    "@types/react-dom": "19.2.3"
   }
 }
