--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.536.0",
     "mongoose": "^8.17.1",
     "next": "^16.0.7",
+    "next-auth": "^4.24.13",
     "next-cloudinary": "^6.16.0",
     "razorpay": "^2.9.6",
     "react": "^19.2.1",
