--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
     "jsonwebtoken": "^9.0.2",
+    "lenis": "^1.3.15",
     "lucide-react": "^0.536.0",
     "mongoose": "^8.17.1",
     "next": "^16.0.7",
