--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "express": "^5.1.0",
+    "form-data": "^4.0.5",
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
     "jsonwebtoken": "^9.0.2",
     "lenis": "^1.3.15",
     "lucide-react": "^0.536.0",
+    "mailgun.js": "^12.4.0",
     "mongoose": "^8.17.1",
     "motion": "^12.23.26",
     "next": "^16.0.7",
